--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,9 @@ script:
 
 after_success:
 - "scripts/reportCoverage"
+
+deploy:
+  provider: script
+  script: scripts/pypiPublish
+  on:
+    tags: true
