--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ coveralls==1.1
 docopt==0.6.2
 idna==2.5
 requests==2.18.3
+requests-toolbelt==0.8.0
 six==1.10.0
 termcolor==1.1.0
+tqdm==4.15.0
+twine==1.9.1
 urllib3==1.22
