--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ author = Florian Plattner
 author-email = me@florianplattner.de
 maintainer = Florian Plattner
 maintainer-email = me@florianplattner.de
+name = fixturebuilder
 summary = Build fixtures from a single source
 description-file = README.md
 home-page = https://github.com/flowpl/fixturebuilder_py
