docs: convert README from Markdown to RestructuredText

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ maintainer = Florian Plattner
 maintainer-email = me@florianplattner.de
 name = fixturebuilder
 summary = Build fixtures from a single source
-description-file = README.md
+description-file = README.rst
 home-page = https://github.com/flowpl/fixturebuilder_py
 license = MIT
 classifier =
